# normalize-interval-rs

./: .gitignore  Cargo.toml  change_log.md  license.md  readme.md
src/: bound.rs  interval.rs  lib.rs  normalize.rs  parse.rs  perforate.rs  raw_interval.rs  selection.rs  test.rs  tests.rs  tine.rs  tine_tree.rs  utilities.rs  utility.rs
src/test/raw_interval/: enclose.rs  intersect.rs  minus.rs  mod.rs  parse.rs  union.rs
src/test/tine_tree/: intersect.rs  minus.rs  mod.rs  union.rs
