[package]
name = "interval"
version = "0.12.8"
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
edition = "2018"
license = "MIT or Apache-2.0"
# maintenance = { status = "experiemental" }
repository = "https://github.com/skysch/interval-rs"
description = "Interval library"
readme = "readme.md"
keywords = ["range", "interval", "selection", "set", "span"]
categories = []
documentation = ""
homepage = ""
exclude = ["*.sublime-project", "*.sublime-workspace"]

[lib]
name = "interval"

[features]
default = []

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0
debug = false # Disabled to speed up compilation; not being used much.
rpath = false
lto = false
debug-assertions = true
incremental = true
overflow-checks = true

# Development profile overrides, ensure dependent crates run fast.
[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
codegen-units = 1


# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = true
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true

