[package]
name = "normalize_interval"
version = "0.13.1"
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
maintenance = { status = "passively-maintained" }
repository = "https://github.com/skysch/normalize_interval-rs"
description = "Normalizing interval library"
readme = "readme.md"
keywords = ["range", "interval", "selection", "set"]
homepage = "https://github.com/skysch/normalize_interval-rs"
exclude = ["*.sublime-project", "*.sublime-workspace"]

[lib]
name = "normalize_interval"

[features]
default = []


# Required dependencies
[dependencies]
few = { version = "0.1" }

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0
debug = false # Disabled to speed up compilation; not being used much.
rpath = false
lto = false
debug-assertions = true
incremental = true
overflow-checks = true

# Development profile overrides, ensure dependent crates run fast.
[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
codegen-units = 1


# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = true
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true

