[package]
name = "normalize_interval"
version = "0.15.0"
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/solarretrace/normalize_interval-rs"
description = "Normalizing interval library"
readme = "readme.md"
categories = ["data-structures"]
keywords = ["range", "interval", "selection", "set"]
homepage = "https://github.com/solarretrace/normalize_interval-rs"
exclude = ["*.sublime-project", "*.sublime-workspace"]

[lib]
name = "normalize_interval"

[features]
default = []


# Required dependencies
[dependencies]
few = { version = "0.1" }

